@@ -1,3 +1,6 @@
+* The CODA Python interface now automatically sets a default CODA_DEFINITION
+  path relative to the CODA Python package.
+
 2.18.2 2017-06-20
 ~~~~~~~~~~~~~~~~~
 
